--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
     - name: Install mypy
       run: pip install --upgrade mypy
     - name: Run mypy
-      run: mypy --ignore-missing-imports synthtiger
+      run: mypy --ignore-missing-imports --install-types --non-interactive synthtiger
 
   pylint:
     runs-on: ubuntu-latest
