--- a/.pylintrc
+++ b/.pylintrc
@@ -240,7 +240,7 @@ contextmanager-decorators=contextlib.contextmanager
 # List of members which are set dynamically and missed by pylint inference
 # system, and so shouldn't trigger E1101 when accessed. Python regular
 # expressions are accepted.
-generated-members=
+generated-members=cv2.*
 
 # Tells whether missing members accessed in mixin class should be ignored. A
 # mixin class is detected if its name ends with "mixin" (case insensitive).
@@ -449,7 +449,8 @@ good-names=i,
            sz,
            dx,
            dy,
-           dz
+           dz,
+           px
 
 # Good variable names regexes, separated by a comma. If names match any regex,
 # they will always be accepted
