--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,3 @@
-include LICENSE NOTICE README.md
-recursive-include synthtiger *.txt
+graft synthtiger
 global-exclude *.py[cod] .DS_Store
 prune tests
