--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
     - name: Install requirements
-      run: pip install --upgrade -r requirements.txt
+      run: pip install .
     - name: Install black
       run: pip install --upgrade black==22.1.0
     - name: Run black
@@ -43,7 +43,7 @@ jobs:
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
     - name: Install requirements
-      run: pip install --upgrade -r requirements.txt
+      run: pip install .
     - name: Install isort
       run: pip install --upgrade isort==5.10.1
     - name: Run isort
@@ -66,7 +66,7 @@ jobs:
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
     - name: Install requirements
-      run: pip install --upgrade -r requirements.txt
+      run: pip install .
     - name: Install mypy
       run: pip install --upgrade mypy
     - name: Run mypy
@@ -89,7 +89,7 @@ jobs:
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
     - name: Install requirements
-      run: pip install --upgrade -r requirements.txt
+      run: pip install .
     - name: Install pylint
       run: pip install --upgrade pylint
     - name: Run pylint
@@ -113,7 +113,7 @@ jobs:
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
     - name: Install requirements
-      run: pip install --upgrade -r requirements.txt
+      run: pip install .
     - name: Install pytest
       run: pip install --upgrade pytest
     - name: Run pytest
@@ -137,7 +137,7 @@ jobs:
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
     - name: Install requirements
-      run: pip install --upgrade -r requirements.txt
+      run: pip install .
     - name: Install pytest
       run: pip install --upgrade pytest
     - name: Run pytest
@@ -165,7 +165,7 @@ jobs:
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
     - name: Install requirements
-      run: pip install --upgrade -r requirements.txt
+      run: pip install .
     - name: Install pytest
       run: pip install --upgrade pytest
     - name: Run pytest
