--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
     - name: Install requirements
-      run: pip install --upgrade -r requirements.txt
+      run: pip install .
     - name: Install sphinx
       run: pip install --upgrade sphinx furo
     - name: Build docs
