--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         python-version: ${{ matrix.python }}
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
-    - name: Install requirements
+    - name: Install synthtiger
       run: pip install .
     - name: Install black
       run: pip install --upgrade black==22.1.0
@@ -42,7 +42,7 @@ jobs:
         python-version: ${{ matrix.python }}
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
-    - name: Install requirements
+    - name: Install synthtiger
       run: pip install .
     - name: Install isort
       run: pip install --upgrade isort==5.10.1
@@ -65,7 +65,7 @@ jobs:
         python-version: ${{ matrix.python }}
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
-    - name: Install requirements
+    - name: Install synthtiger
       run: pip install .
     - name: Install mypy
       run: pip install --upgrade mypy
@@ -88,7 +88,7 @@ jobs:
         python-version: ${{ matrix.python }}
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
-    - name: Install requirements
+    - name: Install synthtiger
       run: pip install .
     - name: Install pylint
       run: pip install --upgrade pylint
@@ -112,7 +112,7 @@ jobs:
         python-version: ${{ matrix.python }}
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
-    - name: Install requirements
+    - name: Install synthtiger
       run: pip install .
     - name: Install pytest
       run: pip install --upgrade pytest
@@ -136,7 +136,7 @@ jobs:
         python-version: ${{ matrix.python }}
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
-    - name: Install requirements
+    - name: Install synthtiger
       run: pip install .
     - name: Install pytest
       run: pip install --upgrade pytest
@@ -164,7 +164,7 @@ jobs:
         python-version: ${{ matrix.python }}
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
-    - name: Install requirements
+    - name: Install synthtiger
       run: pip install .
     - name: Install pytest
       run: pip install --upgrade pytest
