--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,7 +18,7 @@ jobs:
         python-version: 3.8
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
-    - name: Install requirements
+    - name: Install synthtiger
       run: pip install .
     - name: Install sphinx
       run: pip install --upgrade sphinx furo
