--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
         python-version: ${{ matrix.python }}
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
-    - name: Install requirements
-      run: pip install --upgrade -r requirements.txt
+    - name: Install synthtiger
+      run: pip install .
     - name: Install black
       run: pip install --upgrade black==22.1.0
     - name: Run black
@@ -42,8 +42,8 @@ jobs:
         python-version: ${{ matrix.python }}
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
-    - name: Install requirements
-      run: pip install --upgrade -r requirements.txt
+    - name: Install synthtiger
+      run: pip install .
     - name: Install isort
       run: pip install --upgrade isort==5.10.1
     - name: Run isort
@@ -65,8 +65,8 @@ jobs:
         python-version: ${{ matrix.python }}
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
-    - name: Install requirements
-      run: pip install --upgrade -r requirements.txt
+    - name: Install synthtiger
+      run: pip install .
     - name: Install mypy
       run: pip install --upgrade mypy
     - name: Run mypy
@@ -88,8 +88,8 @@ jobs:
         python-version: ${{ matrix.python }}
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
-    - name: Install requirements
-      run: pip install --upgrade -r requirements.txt
+    - name: Install synthtiger
+      run: pip install .
     - name: Install pylint
       run: pip install --upgrade pylint
     - name: Run pylint
@@ -112,8 +112,8 @@ jobs:
         python-version: ${{ matrix.python }}
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
-    - name: Install requirements
-      run: pip install --upgrade -r requirements.txt
+    - name: Install synthtiger
+      run: pip install .
     - name: Install pytest
       run: pip install --upgrade pytest
     - name: Run pytest
@@ -136,8 +136,8 @@ jobs:
         python-version: ${{ matrix.python }}
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
-    - name: Install requirements
-      run: pip install --upgrade -r requirements.txt
+    - name: Install synthtiger
+      run: pip install .
     - name: Install pytest
       run: pip install --upgrade pytest
     - name: Run pytest
@@ -164,8 +164,8 @@ jobs:
         python-version: ${{ matrix.python }}
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
-    - name: Install requirements
-      run: pip install --upgrade -r requirements.txt
+    - name: Install synthtiger
+      run: pip install .
     - name: Install pytest
       run: pip install --upgrade pytest
     - name: Run pytest
