--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,8 +18,8 @@ jobs:
         python-version: 3.8
     - name: Upgrade pip, setuptools and wheel
       run: python -m pip install --upgrade pip setuptools wheel
-    - name: Install requirements
-      run: pip install --upgrade -r requirements.txt
+    - name: Install synthtiger
+      run: pip install .
     - name: Install sphinx
       run: pip install --upgrade sphinx furo
     - name: Build docs
