--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -154,10 +154,10 @@ jobs:
       uses: actions/checkout@v2
     - name: Set up MSYS2
       uses: msys2/setup-msys2@v2
+    - name: Add MSYS2 MinGW path
+      run: echo "D:\a\_temp\msys64\mingw64\bin" >> $env:GITHUB_PATH
     - name: Install dependencies
       run: msys2 depends/install_windows_depends.sh
-    - name: Add dependency path
-      run: echo "D:\a\_temp\msys64\mingw64\bin" >> $env:GITHUB_PATH
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
